added plotsystem ftp route
